[tool.poetry]
name = "popclip"
version = "0.1.0"
description = "A GIS tool for clipping WorldPop raster data"
authors = ["Nishon Tandukar <youremail@example.com>"]
packages = [{include = "popclip"}]

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "^2.0.7"
rasterio = "^1.3.9"
geopandas = "^0.14.2"
tqdm = "^4.66.1"

[tool.poetry.scripts]
popclip = "popclip.population_raster_clipper:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
